removed particle.js

--- a/src/assets/scss/Navbar.scss
+++ b/src/assets/scss/Navbar.scss
@@ -2,7 +2,7 @@
 	position: fixed;
 	width: 100%;
 	z-index: 9;
-	color: #fff;
+	color: #000;
 	.container {
 		display: flex;
 		align-items: center;
