--- a/src/assets/scss/Landing.scss
+++ b/src/assets/scss/Landing.scss
@@ -3,13 +3,13 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		background-color: #2d2c2c;
+		background-color: #f0f0f0;
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: 50% 50%;
 	}
 	.info {
-		color: #eeeeee;
+		color: #000;
 		text-align: center;
 		position: absolute;
 		top: 50%;
