--- a/src/assets/scss/Landing.scss
+++ b/src/assets/scss/Landing.scss
@@ -1,39 +1,48 @@
 .landing {
-	#particles-js {
+	font-family: "Orbitron", sans-serif;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	.bg {
+		z-index: -1;
 		position: absolute;
+		top: 0;
+		left: 0;
 		width: 100%;
-		height: 100%;
-		background-color: #f0f0f0;
-		background-repeat: no-repeat;
+		height: 100vh;
+		background-image: url("../images/background.jpg");
 		background-size: cover;
-		background-position: 50% 50%;
+		background-position: center;
+		background-repeat: no-repeat;
+		opacity: 0.3;
 	}
-	.info {
-		color: #000;
-		text-align: center;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		pointer-events: none;
-		img {
-			height: 200px;
-			left: 30px;
-		}
-		h6 {
-			font-size: 1rem;
-		}
-		h2 {
-			margin-top: 15px;
-		}
+	.title {
+		font-weight: bold;
+		font-size: 96px;
+		text-transform: uppercase;
+		color: #ffffff;
+	}
+	.subtitle {
+		font-weight: bold;
+		font-size: 20px;
+		text-transform: uppercase;
+	}
+	.buttons {
+		margin-top: 100px;
 		a {
-			color: #000;
-			background-color: #73ccd9;
-			padding: 10px;
-			pointer-events: painted;
-			border-radius: 5px;
-			&:hover {
-				background-color: #83ceda;
+			padding: 10px 35px;
+			color: #000000;
+			border-radius: 10px;
+			text-transform: uppercase;
+			font-weight: bold;
+			&:nth-child(1) {
+				background: #56bae7;
+				margin-right: 60px;
+			}
+			&:nth-child(2) {
+				background: #fff;
 			}
 		}
 	}
