--- a/src/assets/scss/Landing.scss
+++ b/src/assets/scss/Landing.scss
@@ -37,12 +37,39 @@
 			border-radius: 10px;
 			text-transform: uppercase;
 			font-weight: bold;
+			font-size: 18px;
+
 			&:nth-child(1) {
 				background: #56bae7;
 				margin-right: 60px;
 			}
 			&:nth-child(2) {
 				background: #fff;
+			}
+		}
+	}
+}
+@media (max-width: 992px) {
+	.landing {
+		text-align: center;
+		.title {
+			font-size: 60px;
+		}
+		.subtitle {
+			font-size: 18px;
+		}
+		.buttons {
+			margin-top: 60px;
+			a {
+				padding: 10px 20px;
+				display: block;
+				text-align: center;
+				font-size: 16px;
+
+				&:nth-child(1) {
+					margin-right: 0;
+					margin-bottom: 30px;
+				}
 			}
 		}
 	}
