--- a/src/assets/scss/RegisterForm.scss
+++ b/src/assets/scss/RegisterForm.scss
@@ -193,6 +193,18 @@
 		padding: 15px;
 		border-radius: 5px;
 		box-shadow: 0px 0px 40px 0.1px rgba(0, 0, 0, 0.25);
+		.checkbox {
+			position: relative;
+			input[type="checkbox"] {
+				display: block;
+				position: absolute;
+				top: 0;
+				opacity: 0;
+			}
+			input[type="checkbox"]:checked {
+				opacity: 0;
+			}
+		}
 	}
 }
 @media (max-width: 992px) {
