--- a/src/assets/scss/About.scss
+++ b/src/assets/scss/About.scss
@@ -45,13 +45,24 @@
 			}
 			.socials {
 				display: flex;
-				justify-content: space-between;
+				justify-content: space-around;
 				width: 200px;
 				margin: 30px auto;
 				a {
 					font-size: 2rem;
+					:hover {
+						opacity: 0.5;
+					}
 				}
 			}
+		}
+	}
+}
+@media (max-width: 992px) {
+	.about {
+		.cards {
+			grid-template-columns: 1fr;
+			grid-gap: 100px;
 		}
 	}
 }
