--- a/src/assets/scss/Landing.scss
+++ b/src/assets/scss/Landing.scss
@@ -12,7 +12,7 @@
 		left: 0;
 		width: 100%;
 		height: 100vh;
-		background-image: url("../images/background.jpg");
+		background-image: url("../images/background.webp");
 		background-size: cover;
 		background-position: center;
 		background-repeat: no-repeat;
