--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -50,5 +50,7 @@ a {
 @import "./Explore.scss";
 @import "./EventCard.scss";
 @import "./Events.scss";
+@import "./Faculty.scss";
 @import "./RegisterForm.scss";
 @import "./Footer.scss";
+	
