--- a/src/assets/scss/Faculty.scss
+++ b/src/assets/scss/Faculty.scss
@@ -1,55 +1,82 @@
 .faculty {
-  background: #222222;
-  padding: 50px 0;
+	background: #222222;
+	padding: 50px 0;
 
-  .title {
-    font-weight: bold;
-    font-size: 20px;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 50px;
-  }
-  .card {
-    background: #363636;
-    border-radius: 5px;
-    padding: 30px;
-    display: flex;
-	text-transform: uppercase;
-    .text {
-      padding-right: 40px;
-      font-weight: 500;
-      font-size: 18px;
-      line-height: 138.9%;
-      .title {
-        text-align: left;
-      }
-    }
-    img {
-      border-radius: 5px;
-    }
-  }
+	.title {
+		font-weight: bold;
+		font-size: 20px;
+		text-transform: uppercase;
+		text-align: center;
+		margin-bottom: 50px;
+	}
+	.card {
+		background: #363636;
+		border-radius: 5px;
+		padding: 30px;
+		display: flex;
+		text-transform: uppercase;
+		.text {
+			padding-right: 40px;
+			font-weight: 500;
+			font-size: 18px;
+			line-height: 138.9%;
+			.title {
+				text-align: left;
+			}
+		}
+		img {
+			border-radius: 5px;
+			width: 460px;
+			height: 345px;
+			object-fit: cover;
+		}
+	}
+	&.principal {
+		background-color: #1a1a1b;
+		padding-top: 150px;
+		.card {
+			.text {
+				padding-right: 0px;
+				padding-left: 40px;
+			}
+		}
+	}
 }
 
-
 @media (max-width: 992px) {
-  .faculty {
-    .card {
-      flex-direction: column;
-      .text {
-        padding-right: 0;
-        .title {
-          margin-bottom: 20px;
-          font-size: 16px;
-        }
-        .subtitle {
-          font-size: 14px;
-          padding-right: 0;
-        }
-      }
-    }
-    img {
-      margin-top: 30px;
-      width: 100%;
-    }
-  }
+	.faculty {
+		.card {
+			flex-direction: column;
+			.text {
+				padding-right: 0;
+				.title {
+					margin-bottom: 20px;
+					font-size: 16px;
+				}
+				.subtitle {
+					font-size: 14px;
+					padding-right: 0;
+				}
+			}
+			img {
+				height: auto;
+				margin-top: 30px;
+				width: 100%;
+			}
+		}
+
+		&.principal {
+			background-color: #1a1a1b;
+			padding-top: 150px;
+			.card {
+				.text {
+					padding-left: 0;
+					margin-top: 40px;
+				}
+				img {
+					margin-top: 0px;
+				}
+			}
+		}
+	}
 }
