added team and google search console meta

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -52,5 +52,5 @@ a {
 @import "./Events.scss";
 @import "./Faculty.scss";
 @import "./RegisterForm.scss";
+@import "./Taboiz.scss";
 @import "./Footer.scss";
-	
