removed registeration form and added about images

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -53,4 +53,5 @@ a {
 @import "./Faculty.scss";
 @import "./RegisterForm.scss";
 @import "./Taboiz.scss";
+@import "./RegisterationClosed.scss";
 @import "./Footer.scss";
