--- a/src/assets/scss/Taboiz.scss
+++ b/src/assets/scss/Taboiz.scss
@@ -9,18 +9,19 @@
 		text-align: center;
 	}
 	.slider {
-		height: 100vh;
+		height: 80vh;
 		width: 100%;
 	}
 	.img-container {
 		width: 100%;
-		height: 100vh;
+		height: 80vh;
 		text-align: center;
 		display: flex;
 		align-content: center;
+		outline: none;
 		img {
 			height: 100%;
-			height: 100vh;
+			height: 80vh;
 			width: auto;
 			object-fit: cover;
 			display: inline-block !important;
