--- a/src/assets/scss/Taboiz.scss
+++ b/src/assets/scss/Taboiz.scss
@@ -1,6 +1,8 @@
 .taboiz {
 	padding-top: 100px;
 	background-color: #222222;
+	text-align: center;
+
 	.title {
 		font-weight: bold;
 		font-size: 20px;
@@ -8,23 +10,18 @@
 		margin-bottom: 50px;
 		text-align: center;
 	}
-	.slider {
-		height: 80vh;
-		width: 100%;
-	}
-	.img-container {
-		width: 100%;
-		height: 80vh;
-		text-align: center;
-		display: flex;
-		align-content: center;
-		outline: none;
+	.video-container {
+		position: relative;
 		img {
-			height: 100%;
-			height: 80vh;
-			width: auto;
-			object-fit: cover;
-			display: inline-block !important;
+			width: 100px;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
+		video {
+			max-width: 80vw;
+			margin: 0 auto;
 		}
 	}
 }
@@ -33,12 +30,9 @@
 		.slider {
 			height: 40vh;
 		}
-		.img-container {
-			height: 100%;
-			height: 40vh;
+		.video-container {
 			img {
-				width: 100%;
-				height: 40vh;
+				width: 50px;
 			}
 		}
 	}
