--- a/src/assets/scss/Taboiz.scss
+++ b/src/assets/scss/Taboiz.scss
@@ -12,6 +12,7 @@
 	}
 	.video-container {
 		position: relative;
+		margin-bottom: 50px;
 		img {
 			width: 100px;
 			position: absolute;
@@ -22,6 +23,7 @@
 		video {
 			max-width: 80vw;
 			margin: 0 auto;
+			border-radius: 5px;
 		}
 	}
 }
